[project]
name = "exponent_server_sdk"
version = "2.1.0"
description = "Expo Server SDK for Python"
authors = [
    {name = "Bahadır Araz", email = "bahadiraraz@protonmail.com"},
    {name = "Expo Team", email = "exponent.team@gmail.com"},
]
dependencies = [
    "setuptools>=69.5.1",
    "requests",
    "six",
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "pytest-asyncio>=0.23.6",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/expo/exponent-server-sdk-python"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
